--- a/Hello.html
+++ b/Hello.html
@@ -7,3 +7,5 @@ var myBoolean = true;
 console.log("Name: " + myString);
 console.log("Lucky Number: " + myNumber);
 console.log("Good joke? " + myBoolean);
+
+console.log("pineapple, ham");
