--- a/Hello.html
+++ b/Hello.html
@@ -9,3 +9,8 @@ console.log("Lucky Number: " + myNumber);
 console.log("Good joke? " + myBoolean);
 
 console.log("pineapple, ham");
+
+console.log(19 + 3.5)
+console.log(2016 - 1969)
+console.log(65 / 240)
+console.log(65 / 240 * 100)
