--- a/Hello.html
+++ b/Hello.html
@@ -14,3 +14,6 @@ console.log(19 + 3.5)
 console.log(2016 - 1969)
 console.log(65 / 240)
 console.log(65 / 240 * 100)
+
+console.log(365 / 27)
+console.log(365 % 27)
